--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,13 @@
 RewriteEngine On
 
-# Exclude public folder from redirection
-RewriteCond %{REQUEST_URI} !^/public/
+#Ignore requests for existing files and directories
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 
-# Redirect all other requests to public/index.php
-RewriteRule ^(.*)$ /public/index.php [L]
+#Redirect all other requests to Public/index.php
+RewriteCond %{REQUEST_URI} !^/Public/
+RewriteRule ^(.*)$ /Public/index.php [QSA,L]
+
+#Handle the root path specifically
+RewriteCond %{REQUEST_URI} ^/$
+RewriteRule ^$ /Public/index.php [QSA,L]
