--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
-    "name": "youcode/clone-eventbrite",
+    "name": "youcode/clone-d-eventbrite",
     "autoload": {
         "psr-4": {
-            "app\\": "app/"
-        }
+"App\\": "app/"        }
     },
     "authors": [
         {
@@ -12,12 +11,6 @@
         }
     ],
     "require": {
-        "php": ">=8.0",
-        "ext-pdo": "*",
-        "ext-pgsql": "*"
-    },
-    "require-dev": {
-        "vlucas/phpdotenv": "^5.5",
-        "phpunit/phpunit": "^10.0"
+        "vlucas/phpdotenv": "^5.6"
     }
 }
